# craftworld_cpp

./: CMakeLists.txt
scripts/: generate_levelset.py  test.txt  train.txt
src/: craftworld_base.cpp  craftworld_base.h  definitions.h  util.cpp  util.h
test/: CMakeLists.txt  test.cpp  test_default.cpp  test_serialization.cpp
